--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
     margin: auto;
     position: absolute;
     width: 50%;
-    background-color: white;
+    /* background-color: white; */
 
 }
 
@@ -65,10 +65,11 @@ img{
 
 }
 
-h3{
+h1{
     font-weight: 700;
     color:hsl(217, 19%, 35%);
     margin-bottom: 10px;
+    font-size: 22px;
     
 } 
 
@@ -93,7 +94,7 @@ p{
    
 } 
 
-h5{
+h4{
     font-weight: 700!important;
     font-size: 13px!important;
     color:hsl(217, 19%, 35%)!important;
